syntax = "proto3";

package greet;

option go_package="./greet/greetpb";

service GreetService{
  rpc Greet(GreetRequest) returns (GreetResponse){};
  rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse){};
}

message Greeting {
  string first_name = 1;
  string lastname = 2;
}

message GreetResponse {
  string result = 1;
}

message GreetRequest {
  Greeting greeting = 1;
}

message GreetManyTimesResponse {
  string result = 1;
}

message GreetManyTimesRequest {
  Greeting greeting = 1;
}